[workspace]
members = [
    ".",
    "openvr",
    "license-gen"
]

[package]
name = "clekey-ovr-rs"
version = "0.3.2"
edition = "2021"
repository = "https://github.com/anatawa12/clekeyOVR.git"
license = "GPL-3.0-only"
default-run = "clekey_ovr"

[[bin]]
name = "clekey_ovr"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "4.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.17"
once_cell = "1.15.0"
skia-safe = { version = "0.64.0", features = ["gl", "textlayout"] }
gl = "0.14.0"
cfg-if = "1.0.0"
openvr = { path = "openvr", optional = true }
glam = { version = "0.22.0", features = ["serde"] }
flate2 = "1"
tar = "0.4"
reqwest = { version = "0.11.13", features = ["blocking", "deflate", "gzip", "json"] }
percent-encoding = "2.2.0"
bytemuck = "1.13.1"

[build-dependencies]
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
license-gen = { path = "license-gen" }

[target."cfg(windows)".dependencies.winsafe]
version = "0.0.17"
features = [
    "user",
    "kernel",
]

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[target."cfg(windows)".features]
default = ["openvr"]

[features]
# by build.rs, 
#  - debug_window is enabled in default on debug build (cfg(debug_assertions))
default = []
debug_window = []
